# Open-TEE

./: .clang-format  .dir-locals.el  .editorconfig  .envrc  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  DeleteMe.txt  DeleteMe2.txt  DeleteMe4.txt  DeleteMe5.txt  README.md  default.nix  devenv.nix  flake.nix  install_android.sh  opentee  shell.nix
CAs/: .gitignore  CMakeLists.txt  ClientApplications.qbs  Makefile.am  README.md  configure.ac  test_client.qbs
CAs/conn_test_app/: Android.mk  Makemodule.am  conn_test_app.c  conn_test_app.qbs  conn_test_ctl.h  panic_crash_ctl.h
CAs/example_conversion/: Makemodule.am  sign_ecdsa_256_ctrl.h  sign_non_tee_ecdsa_256.c  sign_tee_ecdsa_256.c
CAs/example_sha1_ca/: Makemodule.am  example_sha1_ca.c  example_sha1_ca.qbs
CAs/omnishare_fuse/: Makemodule.am  omnishare  omnishare_fuse.c  omnishare_fuse.qbs
CAs/services_test/: Makemodule.am  services_test.c  services_test.qbs  ta_services_ctrl.h
CAs/smoke_test_CAs/: smoke_test_CAs.qbs
CAs/src/: raw_socket.c  test_session.c
CAs/storage_test_ca/: Android.mk  Makemodule.am  storage_test_ca.c  storage_test_ca.qbs
CAs/sym_key_gen_ca/: .Makemodule.am.swp  Makemodule.am  ca_sym_key_256_gen.c
CAs/test_session/: Makemodule.am  raw_socket.c  test_session.c  test_session.qbs
CAs/trusted_ui_example_ca/: trusted_ui_example_ca.c  trusted_ui_example_ca.qbs
CAs/usr_study_ca/: Makemodule.am  usr_study_ca.c  usr_study_ca.qbs  usr_study_ta_ctrl.h
TAs/: .gitignore  CMakeLists.txt  Makefile.am  README.md  TrustedApplications.qbs  configure.ac
TAs/example_conversion/: Makemodule.am  sign_ecdsa_256.c  sign_ecdsa_256_ctrl.h
TAs/example_digest_ta/: .Makemodule.am.swp  Makemodule.am  example_digest_ta.c  example_digest_ta.qbs
TAs/example_sha1_ta/: example_sha1_ta.c  example_sha1_ta.qbs
TAs/example_ta/: Makemodule.am  example_ta.c  example_ta.qbs  open_tee_conf.c
TAs/include/: tee_ta_properties.h
TAs/omnishare_ta/: Android.mk  Makemodule.am  omnishare_ta.c  omnishare_ta.qbs
TAs/pkcs11_ta/: Android.mk  Makemodule.am  pkcs11_ta.qbs
TAs/smoke_test_TAs/: smoke_test_TAs.qbs
TAs/storage_test_ta/: Android.mk  Makemodule.am  storage_test_ta.c  storage_test_ta.qbs
TAs/sym_key_gen_ta/: Makemodule.am  ta_sym_key_gen.c
TAs/ta2ta_conn_test_app/: Android.mk  Makemodule.am  ta2ta_conn_test_app.c  ta2ta_conn_test_app.qbs  ta2ta_conn_test_app_ctrl.h
TAs/ta_conn_test_app/: Android.mk  Makemodule.am  conn_test_ctl.h  ta_conn_test_app.c  ta_conn_test_app.qbs
TAs/ta_panic_crash/: Makemodule.am  panic_crash_ctl.h  ta_panic_crash.c
TAs/ta_services/: Makemodule.am  ta_services.c  ta_services.qbs  ta_services_ctrl.h
TAs/test_applet/: test_applet.c  test_applet.qbs
TAs/trusted_ui_example_ta/: open_tee_conf.c  trusted_ui_example_ta.c  trusted_ui_example_ta.qbs
TAs/usr_study_ta/: Makemodule.am  usr_study_ta.c  usr_study_ta.qbs  usr_study_ta_ctrl.h
emulator/: CMakeLists.txt
emulator/common/: android_defines.h  elf_read.c  epoll_wrapper.c
emulator/include/: conf_parser.h  core_control_resources.h  elf_read.h  epoll_wrapper.h  subprocess.h  ta_exit_states.h  tee_internal_api.h  tee_list.h
emulator/internal_api/: Makemodule.am  callbacks.c  opentee_internal_api.h  tee_bigint.c  tee_bigint.h  tee_cancellation.c  tee_crypto_api.h  tee_data_types.h  tee_internal_client_api.h  tee_memory.c  tee_memory.h  tee_panic.c  tee_storage_api.h  tee_time_api.c  tee_time_api.h
emulator/launcher/: Android.mk  Makemodule.am  dynamic_loader.c  dynamic_loader.h  launcher_mainloop.c  ta_ctl_resources.h  ta_internal_thread.c  ta_internal_thread.h  ta_internal_thread_tui.c  ta_internal_thread_tui.h  ta_io_thread.c  ta_process.c  ta_process.h  ta_signal_handler.c
emulator/manager/: Android.mk  Makemodule.am  ext_storage_stream_api.h  ext_storage_stream_api_posix.c  extern_resources.h  io_thread.c  io_thread.h  io_thread_tui.c  logic_thread.c  logic_thread_tui.c  mainloop.c  opentee_manager_storage_api.c  opentee_manager_storage_api.h  shm_mem.c  ta_dir_watch.c  ta_dir_watch.h  trusted_ui_state.h  tui_timeout.c  tui_timeout.h
emulator/opentee-main/: Makemodule.am  args.c  args.h  conf_parser.c  ini.c  ini.h  main.c
libomnishare/: Android.mk  CMakeLists.txt  Makefile.am  README.md  configure.ac  libomnishare.qbs
libomnishare/include/: Makemodule.am  omnishare.h
libomnishare/src/: Makemodule.am  omnishare.c  omnishare_private.h
libtee/: .gitignore  Android.mk  CMakeLists.txt  Makefile.am  README.md  configure.ac  libtee.pc.cmake.in  libtee.pc.in  libtee.qbs  tee.qbs
libtee/include/: Makemodule.am  com_protocol.h  tee_client_api.h  tee_emu_client_api.h  tee_logging.h  tee_shared_data_types.h  tee_ta_propertie.h
libtee/src/: Makemodule.am  com_protocol.c  socket_help.c  tee_client_api.c  tee_client_api_emu_ipc.c  tee_client_ipc_api.c  tee_client_mem_api.c  tee_logging.c  utils.c
libtee_pkcs11/: .gitignore  Android.mk  CMakeLists.txt  README.md  configure.ac  libtee_pkcs11.qbs
libtee_pkcs11/include/: Makemodule.am  cryptoki.h  pkcs11.h  pkcs11f.h  pkcs11t.h
libtee_pkcs11/src/: Makemodule.am  commands.h  common.c  common.h  hal.h  hal_gp.c  mutex_manager.c  mutex_manager.h  pkcs11_crypto.c  pkcs11_general.c  pkcs11_object.c  pkcs11_session_slot.c
tests/: .gitignore  CMakeLists.txt  Makefile.am  README.md  configure.ac  tests.qbs  tui_display_stub.py
tests/internal_api/: Android.mk  Makemodule.am  crypto_test.c  crypto_test.h  crypto_test.qbs  print_functions.h  storage_test.c  storage_test.h  storage_test.qbs  ta2ta_test.c  ta2ta_test.h
tests/pkcs11/: Android.mk  Makemodule.am  pkcs11_test.qbs  pkcs11_test_app.c
tests/scripts/: smoke_test.sh
virtualdisplay-qt/: CMakeLists.txt  comprotocolmessage.cpp  comprotocolmessage.hpp  comprotocolsocket.cpp  comprotocolsocket.hpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  settingsdialog.cpp  settingsdialog.hpp  trusteduiwidget.cpp  trusteduiwidget.hpp  tuiprotocol.cpp  tuiprotocol.hpp  tuiservice.cpp  tuiservice.hpp  tuisettings.hpp  tuistate.cpp  tuistate.hpp  virtualdisplay-qt.pro  virtualdisplay-qt.qbs
(+117 files in other folders)
