#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([libomnishare], [0.0.0], [https://github.com/Open-TEE/libomnishare/issues],
	[libomnishare], [https://github.com/Open-TEE])
AM_INIT_AUTOMAKE([dist-bzip2 foreign subdir-objects])
AC_CONFIG_SRCDIR([src/omnishare.c])
AC_CONFIG_MACRO_DIR([m4])

# Checks for programs.
AC_PROG_CC
LT_INIT

# Checks for libraries.

# Created configuration files
AC_CONFIG_FILES([Makefile])

AC_OUTPUT
