#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([libtee_pkcs11], [0.0.0], [https://github.com/Open-TEE/libtee_pkcs11/issues],
	[libtee_pkcs11], [https://github.com/Open-TEE])
AM_INIT_AUTOMAKE([dist-bzip2 foreign subdir-objects])
AC_CONFIG_SRCDIR([src/hal_gp.c])
AC_CONFIG_MACRO_DIR([m4])

# Checks for programs.
AC_PROG_CC
LT_INIT

# Checks for libraries.

# Created configuration files
AC_CONFIG_FILES([Makefile])

AC_OUTPUT
